# chepp

./: Bishop.cpp  Bishop.h  Board.cpp  BoardGUI.cpp  CMakeLists.txt  Knight.cpp  Knight.h  LICENSE  Main.cpp  Pawn.cpp  Pawn.h  Pieces.cpp  Queen.cpp  Queen.h  README.md  Rook.cpp  Rook.h  main.cpp
src/: bishop.cpp  board.cpp  board.h  king.cpp  knight.cpp  pawn.cpp  piece.h  queen.cpp  rook.cpp
